--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,6 @@
        "      <th>calculated_finished_sq_ft</th>\n",
        "      <th>tax_value_dollar_count</th>\n",
        "      <th>year_built</th>\n",
-       "      <th>tax_amount</th>\n",
        "      <th>fips</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -56,7 +55,6 @@
        "      <td>1692.0</td>\n",
        "      <td>272798.0</td>\n",
        "      <td>1958.0</td>\n",
-       "      <td>3332.98</td>\n",
        "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -66,7 +64,6 @@
        "      <td>1717.0</td>\n",
        "      <td>576498.0</td>\n",
        "      <td>1974.0</td>\n",
-       "      <td>5965.30</td>\n",
        "      <td>6059.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -76,7 +73,6 @@
        "      <td>1268.0</td>\n",
        "      <td>69437.0</td>\n",
        "      <td>1943.0</td>\n",
-       "      <td>1117.93</td>\n",
        "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -86,7 +82,6 @@
        "      <td>2114.0</td>\n",
        "      <td>668453.0</td>\n",
        "      <td>1969.0</td>\n",
-       "      <td>7811.54</td>\n",
        "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -96,7 +91,6 @@
        "      <td>1956.0</td>\n",
        "      <td>236837.0</td>\n",
        "      <td>1937.0</td>\n",
-       "      <td>2928.57</td>\n",
        "      <td>6037.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -111,15 +105,15 @@
        "830807             4.0             2.0                     2114.0   \n",
        "1307312            3.0             2.0                     1956.0   \n",
        "\n",
-       "         tax_value_dollar_count  year_built  tax_amount    fips  \n",
-       "494207                 272798.0      1958.0     3332.98  6037.0  \n",
-       "1079918                576498.0      1974.0     5965.30  6059.0  \n",
-       "795891                  69437.0      1943.0     1117.93  6037.0  \n",
-       "830807                 668453.0      1969.0     7811.54  6037.0  \n",
-       "1307312                236837.0      1937.0     2928.57  6037.0  "
+       "         tax_value_dollar_count  year_built    fips  \n",
+       "494207                 272798.0      1958.0  6037.0  \n",
+       "1079918                576498.0      1974.0  6059.0  \n",
+       "795891                  69437.0      1943.0  6037.0  \n",
+       "830807                 668453.0      1969.0  6037.0  \n",
+       "1307312                236837.0      1937.0  6037.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
