fixed sql query and reran

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -19,9 +19,102 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zillow.csv not found. Connecting to MySQL database and reading table to dataframe.\n",
+      "Connected successfully\n",
+      "Table saved to zillow.csv\n",
+      "(52442, 7)\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroom_count</th>\n",
+       "      <th>bathroom_count</th>\n",
+       "      <th>calculated_finished_sq_ft</th>\n",
+       "      <th>tax_value_dollar_count</th>\n",
+       "      <th>year_built</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24082</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1040.0</td>\n",
+       "      <td>315000.0</td>\n",
+       "      <td>1971.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9432</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>51513.0</td>\n",
+       "      <td>1947.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50142</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1180.0</td>\n",
+       "      <td>64709.0</td>\n",
+       "      <td>1949.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38310</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1922.0</td>\n",
+       "      <td>218663.0</td>\n",
+       "      <td>1952.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3710.0</td>\n",
+       "      <td>1700000.0</td>\n",
+       "      <td>1987.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1232128, 5)"
+       "       bedroom_count  bathroom_count  calculated_finished_sq_ft  \\\n",
+       "24082            3.0             2.0                     1040.0   \n",
+       "9432             4.0             1.0                     1354.0   \n",
+       "50142            3.0             1.0                     1180.0   \n",
+       "38310            3.0             2.0                     1922.0   \n",
+       "7652             4.0             4.0                     3710.0   \n",
+       "\n",
+       "       tax_value_dollar_count  year_built  \n",
+       "24082                315000.0      1971.0  \n",
+       "9432                  51513.0      1947.0  \n",
+       "50142                 64709.0      1949.0  \n",
+       "38310                218663.0      1952.0  \n",
+       "7652                1700000.0      1987.0  "
       ]
      },
      "execution_count": 2,
