--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "7652                1700000.0      1987.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,6 +103,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression, LassoLars, TweedieRegressor\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from wrangle import Wrangle\n",
     "from prepare import Prepare\n",
     "import pandas as pd\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,10 +132,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroom_count</th>\n",
+       "      <th>bathroom_count</th>\n",
+       "      <th>calculated_finished_sq_ft</th>\n",
+       "      <th>tax_value_dollar_count</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24082</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1040.0</td>\n",
+       "      <td>315000.0</td>\n",
+       "      <td>1971.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9432</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>51513.0</td>\n",
+       "      <td>1947.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50142</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1180.0</td>\n",
+       "      <td>64709.0</td>\n",
+       "      <td>1949.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38310</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1922.0</td>\n",
+       "      <td>218663.0</td>\n",
+       "      <td>1952.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3710.0</td>\n",
+       "      <td>1700000.0</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       bedroom_count  bathroom_count  calculated_finished_sq_ft  \\\n",
+       "24082            3.0             2.0                     1040.0   \n",
+       "9432             4.0             1.0                     1354.0   \n",
+       "50142            3.0             1.0                     1180.0   \n",
+       "38310            3.0             2.0                     1922.0   \n",
+       "7652             4.0             4.0                     3710.0   \n",
+       "\n",
+       "       tax_value_dollar_count  year_built  baseline_prediction  \n",
+       "24082                315000.0      1971.0        455123.241223  \n",
+       "9432                  51513.0      1947.0        455123.241223  \n",
+       "50142                 64709.0      1949.0        455123.241223  \n",
+       "38310                218663.0      1952.0        455123.241223  \n",
+       "7652                1700000.0      1987.0        455123.241223  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_pred = train[\"tax_value_dollar_count\"].mean()\n",
+    "train['baseline_prediction'] = baseline_pred\n",
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "386069.73075485"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_rmse = mean_squared_error(train[\"tax_value_dollar_count\"], train[\"baseline_prediction\"], squared=False)\n",
+    "baseline_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baseline RMSE is 386069.73"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search(X, y, model, params_dic):\n",
+    "    grid = GridSearchCV(model, params_dic, n_jobs=-1)\n",
+    "    return grid.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lr"
+   ]
   }
  ],
  "metadata": {
