updated drop list and working through poor performing model

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +31,7 @@
        "      <th>calculated_finished_sq_ft</th>\n",
        "      <th>tax_value_dollar_count</th>\n",
        "      <th>year_built</th>\n",
+       "      <th>fips</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -41,6 +42,7 @@
        "      <td>1040.0</td>\n",
        "      <td>315000.0</td>\n",
        "      <td>1971.0</td>\n",
+       "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9432</th>\n",
@@ -49,6 +51,7 @@
        "      <td>1354.0</td>\n",
        "      <td>51513.0</td>\n",
        "      <td>1947.0</td>\n",
+       "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50142</th>\n",
@@ -57,6 +60,7 @@
        "      <td>1180.0</td>\n",
        "      <td>64709.0</td>\n",
        "      <td>1949.0</td>\n",
+       "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38310</th>\n",
@@ -65,6 +69,7 @@
        "      <td>1922.0</td>\n",
        "      <td>218663.0</td>\n",
        "      <td>1952.0</td>\n",
+       "      <td>6037.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7652</th>\n",
@@ -73,6 +78,7 @@
        "      <td>3710.0</td>\n",
        "      <td>1700000.0</td>\n",
        "      <td>1987.0</td>\n",
+       "      <td>6037.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -86,15 +92,15 @@
        "38310            3.0             2.0                     1922.0   \n",
        "7652             4.0             4.0                     3710.0   \n",
        "\n",
-       "       tax_value_dollar_count  year_built  \n",
-       "24082                315000.0      1971.0  \n",
-       "9432                  51513.0      1947.0  \n",
-       "50142                 64709.0      1949.0  \n",
-       "38310                218663.0      1952.0  \n",
-       "7652                1700000.0      1987.0  "
+       "       tax_value_dollar_count  year_built    fips  \n",
+       "24082                315000.0      1971.0  6037.0  \n",
+       "9432                  51513.0      1947.0  6037.0  \n",
+       "50142                 64709.0      1949.0  6037.0  \n",
+       "38310                218663.0      1952.0  6037.0  \n",
+       "7652                1700000.0      1987.0  6037.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,17 +119,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroom_count</th>\n",
+       "      <th>bathroom_count</th>\n",
+       "      <th>calculated_finished_sq_ft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24082</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1040.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9432</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1354.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50142</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1180.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38310</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1922.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3710.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       bedroom_count  bathroom_count  calculated_finished_sq_ft\n",
+       "24082            3.0             2.0                     1040.0\n",
+       "9432             4.0             1.0                     1354.0\n",
+       "50142            3.0             1.0                     1180.0\n",
+       "38310            3.0             2.0                     1922.0\n",
+       "7652             4.0             4.0                     3710.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = Prepare()\n",
-    "(X_train, y_train), (X_val, y_val), (X_test, y_test) = p.get_Xy(train, val, test)"
+    "(X_train, y_train), (X_val, y_val), (X_test, y_test) = p.get_Xy(train, val, test)\n",
+    "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +243,7 @@
        "      <th>calculated_finished_sq_ft</th>\n",
        "      <th>tax_value_dollar_count</th>\n",
        "      <th>year_built</th>\n",
+       "      <th>fips</th>\n",
        "      <th>baseline_prediction</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -172,6 +255,7 @@
        "      <td>1040.0</td>\n",
        "      <td>315000.0</td>\n",
        "      <td>1971.0</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -181,6 +265,7 @@
        "      <td>1354.0</td>\n",
        "      <td>51513.0</td>\n",
        "      <td>1947.0</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -190,6 +275,7 @@
        "      <td>1180.0</td>\n",
        "      <td>64709.0</td>\n",
        "      <td>1949.0</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -199,6 +285,7 @@
        "      <td>1922.0</td>\n",
        "      <td>218663.0</td>\n",
        "      <td>1952.0</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -208,6 +295,7 @@
        "      <td>3710.0</td>\n",
        "      <td>1700000.0</td>\n",
        "      <td>1987.0</td>\n",
+       "      <td>6037.0</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -222,15 +310,15 @@
        "38310            3.0             2.0                     1922.0   \n",
        "7652             4.0             4.0                     3710.0   \n",
        "\n",
-       "       tax_value_dollar_count  year_built  baseline_prediction  \n",
-       "24082                315000.0      1971.0        455123.241223  \n",
-       "9432                  51513.0      1947.0        455123.241223  \n",
-       "50142                 64709.0      1949.0        455123.241223  \n",
-       "38310                218663.0      1952.0        455123.241223  \n",
-       "7652                1700000.0      1987.0        455123.241223  "
+       "       tax_value_dollar_count  year_built    fips  baseline_prediction  \n",
+       "24082                315000.0      1971.0  6037.0        455123.241223  \n",
+       "9432                  51513.0      1947.0  6037.0        455123.241223  \n",
+       "50142                 64709.0      1949.0  6037.0        455123.241223  \n",
+       "38310                218663.0      1952.0  6037.0        455123.241223  \n",
+       "7652                1700000.0      1987.0  6037.0        455123.241223  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +340,7 @@
        "386069.73075485"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,12 +370,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr"
+    "lasso_grid = {\"alpha\": [0.01, 0.1, 0.5, 1.0]}\n",
+    "tweedie_grid = {\"power\": [0, 1, 2, 3], \"alpha\": [0.01, 0.1, 0.5, 1.0]}\n",
+    "models = [LassoLars(random_state=123, normalize=False), TweedieRegressor()]\n",
+    "\n",
+    "lasso_fit_model = grid_search(X_train_scaled, y_train, models[0], lasso_grid)\n",
+    "tweddie = grid_search(X_train_scaled, y_train, models[1], tweedie_grid)\n",
+    "lr = LinearRegression().fit(X_train_scaled, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LassoLars(normalize=False, random_state=123)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lasso_fit_model.best_estimator_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 1.0}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lasso_fit_model.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TweedieRegressor(power=1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweddie.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 1.0, 'power': 1}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweddie.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso = LassoLars(alpha=0.5, normalize=False).fit(X_train_scaled, y_train)\n",
+    "tweedie = TweedieRegressor(power=1, alpha=0.5).fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3177081322343941"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.score(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.31770813222420446"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lasso.score(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3240118509982971"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweedie.score(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
