added to modeling, change some column names, adding county and state columns, explore even vs odd baths and beds

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -26,10 +26,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedroom_count</th>\n",
-       "      <th>bathroom_count</th>\n",
-       "      <th>calculated_finished_sq_ft</th>\n",
-       "      <th>tax_value_dollar_count</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>square_feet</th>\n",
+       "      <th>home_tax_value</th>\n",
        "      <th>year_built</th>\n",
        "      <th>fips</th>\n",
        "    </tr>\n",
@@ -85,19 +85,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       bedroom_count  bathroom_count  calculated_finished_sq_ft  \\\n",
-       "24082            3.0             2.0                     1040.0   \n",
-       "9432             4.0             1.0                     1354.0   \n",
-       "50142            3.0             1.0                     1180.0   \n",
-       "38310            3.0             2.0                     1922.0   \n",
-       "7652             4.0             4.0                     3710.0   \n",
-       "\n",
-       "       tax_value_dollar_count  year_built    fips  \n",
-       "24082                315000.0      1971.0  6037.0  \n",
-       "9432                  51513.0      1947.0  6037.0  \n",
-       "50142                 64709.0      1949.0  6037.0  \n",
-       "38310                218663.0      1952.0  6037.0  \n",
-       "7652                1700000.0      1987.0  6037.0  "
+       "       bedrooms  bathrooms  square_feet  home_tax_value  year_built    fips\n",
+       "24082       3.0        2.0       1040.0        315000.0      1971.0  6037.0\n",
+       "9432        4.0        1.0       1354.0         51513.0      1947.0  6037.0\n",
+       "50142       3.0        1.0       1180.0         64709.0      1949.0  6037.0\n",
+       "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0\n",
+       "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0"
       ]
      },
      "execution_count": 1,
@@ -143,9 +136,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedroom_count</th>\n",
-       "      <th>bathroom_count</th>\n",
-       "      <th>calculated_finished_sq_ft</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>square_feet</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -184,12 +177,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       bedroom_count  bathroom_count  calculated_finished_sq_ft\n",
-       "24082            3.0             2.0                     1040.0\n",
-       "9432             4.0             1.0                     1354.0\n",
-       "50142            3.0             1.0                     1180.0\n",
-       "38310            3.0             2.0                     1922.0\n",
-       "7652             4.0             4.0                     3710.0"
+       "       bedrooms  bathrooms  square_feet\n",
+       "24082       3.0        2.0       1040.0\n",
+       "9432        4.0        1.0       1354.0\n",
+       "50142       3.0        1.0       1180.0\n",
+       "38310       3.0        2.0       1922.0\n",
+       "7652        4.0        4.0       3710.0"
       ]
      },
      "execution_count": 2,
@@ -214,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,10 +231,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedroom_count</th>\n",
-       "      <th>bathroom_count</th>\n",
-       "      <th>calculated_finished_sq_ft</th>\n",
-       "      <th>tax_value_dollar_count</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>square_feet</th>\n",
+       "      <th>home_tax_value</th>\n",
        "      <th>year_built</th>\n",
        "      <th>fips</th>\n",
        "      <th>baseline_prediction</th>\n",
@@ -303,41 +296,19 @@
        "</div>"
       ],
       "text/plain": [
-       "       bedroom_count  bathroom_count  calculated_finished_sq_ft  \\\n",
-       "24082            3.0             2.0                     1040.0   \n",
-       "9432             4.0             1.0                     1354.0   \n",
-       "50142            3.0             1.0                     1180.0   \n",
-       "38310            3.0             2.0                     1922.0   \n",
-       "7652             4.0             4.0                     3710.0   \n",
+       "       bedrooms  bathrooms  square_feet  home_tax_value  year_built    fips  \\\n",
+       "24082       3.0        2.0       1040.0        315000.0      1971.0  6037.0   \n",
+       "9432        4.0        1.0       1354.0         51513.0      1947.0  6037.0   \n",
+       "50142       3.0        1.0       1180.0         64709.0      1949.0  6037.0   \n",
+       "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0   \n",
+       "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0   \n",
        "\n",
-       "       tax_value_dollar_count  year_built    fips  baseline_prediction  \n",
-       "24082                315000.0      1971.0  6037.0        455123.241223  \n",
-       "9432                  51513.0      1947.0  6037.0        455123.241223  \n",
-       "50142                 64709.0      1949.0  6037.0        455123.241223  \n",
-       "38310                218663.0      1952.0  6037.0        455123.241223  \n",
-       "7652                1700000.0      1987.0  6037.0        455123.241223  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "baseline_pred = train[\"tax_value_dollar_count\"].mean()\n",
-    "train['baseline_prediction'] = baseline_pred\n",
-    "train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "386069.73075485"
+       "       baseline_prediction  \n",
+       "24082        455123.241223  \n",
+       "9432         455123.241223  \n",
+       "50142        455123.241223  \n",
+       "38310        455123.241223  \n",
+       "7652         455123.241223  "
       ]
      },
      "execution_count": 5,
@@ -346,7 +317,29 @@
     }
    ],
    "source": [
-    "baseline_rmse = mean_squared_error(train[\"tax_value_dollar_count\"], train[\"baseline_prediction\"], squared=False)\n",
+    "baseline_pred = train[\"home_tax_value\"].mean()\n",
+    "train['baseline_prediction'] = baseline_pred\n",
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "386069.73075485"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_rmse = mean_squared_error(train[\"home_tax_value\"], train[\"baseline_prediction\"], squared=False)\n",
     "baseline_rmse"
    ]
   },
